--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "extra-component": "outfile.cjs"
   },
   "scripts": {
+    "prepare": "husky install",
+    "format": "prettier --write .",
     "build": "zx ./scripts/build.mjs"
   },
   "repository": {
@@ -27,10 +29,17 @@
   },
   "homepage": "https://github.com/Asaki-M/auto-extra-component#readme",
   "devDependencies": {
+    "@types/prompts": "^2.0.14",
     "esbuild": "^0.14.53",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "prompts": "^2.4.2",
     "zx": "^7.0.8"
+  },
+  "lint-staged": {
+    "*.{js,ts,json}": [
+      "prettier --write"
+    ]
   }
 }
